linked list in changed to list